crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__getsentry-sentry__f96e0f2de81f9d5b95614393be420f3107604220__src__sentry__templatetags__sentry_helpers.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/getsentry-sentry/f96e0f2de81f9d5b95614393be420f3107604220/src/sentry/templatetags/sentry_helpers.py
---
tag_rules:
  "src.sentry.templatetags.sentry_helpers::get_sentry_version":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::loading_message":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::org_url":
    arg_constraints:
      - Min: 3
      - Max: 5
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: organization
        required: true
        kind: Variable
        position: 0
      - name: path
        required: true
        kind: Variable
        position: 1
      - name: query
        required: false
        kind: Variable
        position: 2
      - name: fragment
        required: false
        kind: Variable
        position: 3
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::percent":
    arg_constraints:
      - Min: 3
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: value
        required: true
        kind: Variable
        position: 0
      - name: total
        required: true
        kind: Variable
        position: 1
      - name: format
        required: false
        kind: Variable
        position: 2
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::random_int":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: a
        required: true
        kind: Variable
        position: 0
      - name: b
        required: false
        kind: Variable
        position: 1
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::security_contact":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::serialize":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: value
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "src.sentry.templatetags.sentry_helpers::system_origin":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
filter_arities:
  "src.sentry.templatetags.sentry_helpers::absolute_value":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::as_sorted":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::as_tag_alias":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::basename":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::date":
    expects_arg: true
    arg_optional: true
  "src.sentry.templatetags.sentry_helpers::duration":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::get_item":
    expects_arg: true
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::is_url":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::multiply":
    expects_arg: true
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::sanitize_periods":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::small_count":
    expects_arg: true
    arg_optional: true
  "src.sentry.templatetags.sentry_helpers::soft_break":
    expects_arg: true
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::split":
    expects_arg: true
    arg_optional: true
  "src.sentry.templatetags.sentry_helpers::timesince":
    expects_arg: true
    arg_optional: true
  "src.sentry.templatetags.sentry_helpers::titleize":
    expects_arg: false
    arg_optional: false
  "src.sentry.templatetags.sentry_helpers::to_json":
    expects_arg: true
    arg_optional: true
  "src.sentry.templatetags.sentry_helpers::urlquote":
    expects_arg: true
    arg_optional: true
block_specs: {}
